fix: fixed a couple of the tasks and added more options to more optimally construct the container